<resources>
    <string name="app_name">Vibez</string>
    <string name="loginFail">You have entered an incorrect username or password. You can try again or register.</string>
    <string name="edit_message1">Usename</string>
    <string name="edit_message2">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="Username"></string>
    <string name="Password"></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Test">test</string>
    <string name="mood1">positive</string>
    <string name="mood2">neutral</string>
    <string name="mood3">negative</string>
    <string name="temp1">prev</string>
    <string name="temp2">next</string>
    <string name="date">May 24th, 2016</string>
    <string name="trend1">Weekly Mood Average </string>
    <string name="title_activity_maps">Map</string>
    <string name="feel">How are you feeling?</string>


    <string name="action_settings">Settings</string>

    <string-array name="nav_drawer_items">
        <item>Mood</item>
        <item>Trends</item>
        <item>Daily</item>
        <item>Map</item>
        <!-- <item>Fourth</item>
        <item>Fifth</item>
        <item>Sixth</item> -->
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/heart</item>
        <item>@drawable/chart</item>
        <item>@drawable/chart</item>
        <item>@drawable/map</item>
    </array>
</resources>
