<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="marinatassi.vibez.MainActivity">

    <TextView
        android:id="@+id/loginFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginFail"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_message1"
        android:layout_below="@id/loginFail"/>

    <EditText
        android:id = "@+id/editText1"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:layout_below="@id/Username"
        android:onClick="keyboardAdjust"
        />

    <TextView
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText1"
        android:text="@string/edit_message2"
        />

    <EditText
        android:id = "@+id/editText2"
        android:inputType = "textPassword"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:layout_below="@id/Password"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        />

    <Button
        android:id = "@+id/loginButton"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:onClick = "login"
        android:text = "@string/loginButton"
        android:layout_alignRight="@id/editText2"
        android:layout_below="@id/editText2"
        />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/loginButton"
        android:layout_below="@id/editText2"
        android:text="@string/registerButton"
        android:onClick="register"
        />
</RelativeLayout>
